{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 21,
  "lineage": "cc705b03-4a49-9b3d-14da-71186cbdf4ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:167203313274:subnet/subnet-aec764c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-aec764c7",
            "map_public_ip_on_launch": true,
            "owner_id": "167203313274",
            "state": "available",
            "vpc_id": "vpc-6359f80a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:167203313274:subnet/subnet-60884d1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-60884d1b",
            "map_public_ip_on_launch": true,
            "owner_id": "167203313274",
            "state": "available",
            "vpc_id": "vpc-6359f80a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:167203313274:subnet/subnet-142e315e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-142e315e",
            "map_public_ip_on_launch": true,
            "owner_id": "167203313274",
            "state": "available",
            "vpc_id": "vpc-6359f80a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:167203313274:vpc/vpc-6359f80a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-28ca6241",
            "default_route_table_id": "rtb-ef06b386",
            "default_security_group_id": "sg-4a9e1623",
            "dhcp_options_id": "dopt-f975d990",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-6359f80a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ef06b386",
            "owner_id": "167203313274"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aaed47c3fb20f64",
            "arn": "arn:aws:ec2:eu-west-3:167203313274:instance/i-089a6e87940948fc5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-089a6e87940948fc5",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-02bf6cd6661203d8a",
            "private_dns": "ip-172-31-4-140.eu-west-3.compute.internal",
            "private_ip": "172.31.4.140",
            "public_dns": "ec2-52-47-141-214.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.141.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ce4e8f1e1aa67017",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-aec764c7",
            "tags": {
              "Name": "udagram-app-control_plane-1",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-022fb01b936731a98",
              "sg-09eb0046dd762ba95"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aaed47c3fb20f64",
            "arn": "arn:aws:ec2:eu-west-3:167203313274:instance/i-0c8c23e8c7ee2524b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-0c8c23e8c7ee2524b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-034343e015b85574f",
            "private_dns": "ip-172-31-29-164.eu-west-3.compute.internal",
            "private_ip": "172.31.29.164",
            "public_dns": "ec2-35-181-58-103.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.58.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-06b80aeb8dac12763",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-60884d1b",
            "tags": {
              "Name": "udagram-app-control_plane-2",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-022fb01b936731a98",
              "sg-09eb0046dd762ba95"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aaed47c3fb20f64",
            "arn": "arn:aws:ec2:eu-west-3:167203313274:instance/i-09bc25edcab8e6e68",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-09bc25edcab8e6e68",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc5ff30b8be68758",
            "private_dns": "ip-172-31-43-111.eu-west-3.compute.internal",
            "private_ip": "172.31.43.111",
            "public_dns": "ec2-15-188-65-163.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.65.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-06bc01262923ba38d",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-142e315e",
            "tags": {
              "Name": "udagram-app-control_plane-3",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-022fb01b936731a98",
              "sg-09eb0046dd762ba95"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:loadbalancer/net/udagram-app-api-lb/062af00b6217ba54",
            "arn_suffix": "net/udagram-app-api-lb/062af00b6217ba54",
            "dns_name": "udagram-app-api-lb-062af00b6217ba54.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:loadbalancer/net/udagram-app-api-lb/062af00b6217ba54",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "udagram-app-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-142e315e"
              },
              {
                "subnet_id": "subnet-60884d1b"
              },
              {
                "subnet_id": "subnet-aec764c7"
              }
            ],
            "subnets": [
              "subnet-142e315e",
              "subnet-60884d1b",
              "subnet-aec764c7"
            ],
            "tags": {
              "Cluster": "udagram-app",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "vpc_id": "vpc-6359f80a",
            "zone_id": "Z1CMS0P5QUZ6D5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:listener/net/udagram-app-api-lb/062af00b6217ba54/925e3480e3869b3c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:listener/net/udagram-app-api-lb/062af00b6217ba54/925e3480e3869b3c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:loadbalancer/net/udagram-app-api-lb/062af00b6217ba54",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e",
            "arn_suffix": "targetgroup/udagram-app-api/d33390f70f0f739e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e",
            "lambda_multi_value_headers_enabled": false,
            "name": "udagram-app-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-6359f80a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e-20191017090507221900000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e",
            "target_id": "i-089a6e87940948fc5"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e-20191017090507268800000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e",
            "target_id": "i-0c8c23e8c7ee2524b"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e-20191017090507227800000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:167203313274:targetgroup/udagram-app-api/d33390f70f0f739e",
            "target_id": "i-09bc25edcab8e6e68"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:167203313274:security-group/sg-09eb0046dd762ba95",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eb0046dd762ba95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-app-common",
            "name_prefix": null,
            "owner_id": "167203313274",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-6359f80a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:167203313274:security-group/sg-022fb01b936731a98",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-022fb01b936731a98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-app-control_planes",
            "name_prefix": null,
            "owner_id": "167203313274",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-6359f80a"
          }
        }
      ]
    }
  ]
}